# xplatj2

./: .gitignore  .project  README.md
PxpRpc/runtime_bridge/c-modules/base/: pxprpc_rtbridge_base.hpp
PxpRpc/runtime_bridge/c-modules/xplat-sdlloader/: def.cmake  xplat-sdlloader.hpp
android-project/: .gitignore  build.gradle  settings.gradle
android-project/gradle/wrapper/: gradle-wrapper.properties
android-project/src/main/: AndroidManifest.xml
android-project/src/main/assets/res/: cfg.ini  index.html
android-project/src/main/java/de/cketti/fileprovider/: PublicFileProvider.java
android-project/src/main/java/org/: .gitignore
android-project/src/main/java/project/sdl/: MainActivity.java
android-project/src/main/java/project/webapp/: MainActivity.java
android-project/src/main/java/project/xplat/android/: BackgroundProcessService1.java
android-project/src/main/java/project/xplat/launcher/: ApiServer.java  AssetsCopy.java  MainActivity.java  MainSysShareReceiver.java  PlatApiImpl.java  PxprpcService.java
android-project/src/main/java/project/xplat/sdl/: MainActivity.java
android-project/src/main/java/project/xplat/webapp/: AndroidNodeProcess.java  MainActivity.java  TestCode.java
android-project/src/main/java/pxprpcapi/androidhelper/: AndroidCamera2.java  AndroidUIBase.java  Bluetooth2.java  DisplayManager2.java  Intent2.java  IntentReceiver.java  MediaProjection2.java  Misc2.java  Power2.java  PrivilegeMisc2.java  PxprpcBroadcastReceiverAdapter.java  Sensor2.java  SurfaceManager.java  SysBase.java  Wifi2.java
android-project/src/main/jniLibs/armeabi-v7a/: .gitignore
android-project/src/main/res/values/: strings.xml
commonj/: build.gradle
commonj/src/main/assets/res/: boot0.js
commonj/src/main/java/lib/pursuer/simplewebserver/: CorsBusterServer.java  ProxyIHTTPSession.java  PxprpcWsServer.java  PxprpcWsTunnel.java  WebSocketTunnel.java  WebSocketTunnelServer.java  XplatHTTPDServer.java
commonj/src/main/java/org/slf4j/helpers/: Util.java
commonj/src/main/java/pursuer/patchedmsgpack/compat/: Instant.java
commonj/src/main/java/pursuer/patchedmsgpack/core/: ExtensionTypeHeader.java  MessageBufferPacker.java  MessageFormat.java  MessageFormatException.java  MessageInsufficientBufferException.java  MessageIntegerOverflowException.java  MessageNeverUsedFormatException.java  MessagePack.java  MessagePackException.java  MessagePacker.java  MessageSizeException.java  MessageStringCodingException.java  MessageTypeCastException.java  MessageTypeException.java  MessageUnpacker.java  Preconditions.java
commonj/src/main/java/pursuer/patchedmsgpack/tools/: ArrayBuilder2.java  MPValueTable.java  MapBuilder2.java
commonj/src/main/java/pursuer/patchedmsgpack/value/: ArrayValue.java  BinaryValue.java  BooleanValue.java  ExtensionValue.java  FloatValue.java  ImmutableArrayValue.java  ImmutableBinaryValue.java  ImmutableBooleanValue.java  ImmutableExtensionValue.java  ImmutableFloatValue.java  ImmutableIntegerValue.java  ImmutableMapValue.java  ImmutableNilValue.java  ImmutableNumberValue.java  ImmutableRawValue.java  ImmutableStringValue.java  ImmutableTimestampValue.java  ImmutableValue.java  IntegerValue.java  MapValue.java  NilValue.java  NumberValue.java  RawValue.java  StringValue.java  TimestampValue.java  Value.java  (+3 more)
commonj/src/main/java/pxprpcapi/jsehelper/: JseIo.java  RpcFile.java
commonj/src/main/java/xplatj/platform/: PlatApi.java
commonj/src/main/java/xplatj/pxprpcapi/: JseBaseOsHelper.java  RpcFile.java
javase-project/: .gitignore  build.gradle  config.gradle  settings.gradle
javase-project/gradle/wrapper/: gradle-wrapper.properties
javase-project/res/config/: gui.ini
javase-project/src/main/java/project/xplatj/: JMain.java
launcher/: .gitignore  CMakeLists.txt  SDLLoader.c  boot0.wasm  boot0.wat  build.py  build.sh  build_config_sample.txt  clean.sh  err.txt  guess_by_compiler.toolchain.cmake  launcher.c  out.txt  sljit_allocator.c  sljit_allocator.h  sljit_allocator_patch.h
libffi/: CMakeLists.txt
libuv/: CMakeLists.txt  README.md
libuv/src/compat/: compat.c  compat.h
libuv/src/unix/: internal.h
libuv/src/win/: internal.h
libuv/test/: task.h
pwart/tests/: test2.wat  wasitest1.wat
pxprpc-modules/: .clangd
pxprpc-modules/pxprpc-linuxhelper/: def.wip.cmake  init.hpp
pxprpc-modules/pxprpc-pwart/: def.cmake  init.hpp  pxprpc_pwart.hpp
pxprpc-modules/pxprpc-pxseedloader/: def.cmake  init.hpp
pxprpc-modules/pxprpc-txikijs/: def.cmake  init.hpp  mbedtls.hpp  pxprpc_txikijs.hpp
pxprpc-modules/pxprpc-webview/: .gitignore  def.cmake  init.hpp  pxprpc_webview.hpp
pxprpc-modules/pxprpc-win32helpers/: codec.hpp  def.cmake  init.hpp
pxprpc-modules/pxprpc-winpty/: def.cmake  init.hpp
pxprpc-modules/pxseed-sdlloader/: def.cmake  init.hpp
pxprpc-modules/xplat-sdlloader/: def.cmake  init.hpp  xplat-sdlloader.hpp
tinycc/: internalConfig.h  libtcc.c
tinycc-build/: .gitignore  CMakeLists.txt
tinycc/lib/: libtcc1.c
tools/: android.keystore  install-local-maven.sh
uvwasi/: CMakeLists.txt
(+181 files in other folders)
